; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/mods/extr_modusocket.c_check_timedout.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/mods/extr_modusocket.c_check_timedout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@SL_EAGAIN = common dso_local global i32 0, align 4
@MP_ETIMEDOUT = common dso_local global i32 0, align 4
@SOCKET_TIMEOUT_QUANTA_MS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_timedout(%struct.TYPE_5__* %0, i32 %1, i64* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64*, align 8
  %9 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64* %2, i64** %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load i64*, i64** %8, align 8
  %11 = load i64, i64* %10, align 8
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %4
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* @SL_EAGAIN, align 4
  %16 = icmp ne i32 %14, %15
  br i1 %16, label %17, label %35

17:                                               ; preds = %13, %4
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp sgt i64 %21, 0
  br i1 %22, label %23, label %30

23:                                               ; preds = %17
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* @SL_EAGAIN, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %23
  %28 = load i32, i32* @MP_ETIMEDOUT, align 4
  %29 = load i32*, i32** %9, align 8
  store i32 %28, i32* %29, align 4
  br label %34

30:                                               ; preds = %23, %17
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @convert_sl_errno(i32 %31)
  %33 = load i32*, i32** %9, align 8
  store i32 %32, i32* %33, align 4
  br label %34

34:                                               ; preds = %30, %27
  store i32 -1, i32* %5, align 4
  br label %50

35:                                               ; preds = %13
  %36 = load i64, i64* @SOCKET_TIMEOUT_QUANTA_MS, align 8
  %37 = call i32 @mp_hal_delay_ms(i64 %36)
  %38 = load i64*, i64** %8, align 8
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* @SOCKET_TIMEOUT_QUANTA_MS, align 8
  %41 = icmp slt i64 %39, %40
  br i1 %41, label %42, label %44

42:                                               ; preds = %35
  %43 = load i64*, i64** %8, align 8
  store i64 0, i64* %43, align 8
  br label %49

44:                                               ; preds = %35
  %45 = load i64, i64* @SOCKET_TIMEOUT_QUANTA_MS, align 8
  %46 = load i64*, i64** %8, align 8
  %47 = load i64, i64* %46, align 8
  %48 = sub nsw i64 %47, %45
  store i64 %48, i64* %46, align 8
  br label %49

49:                                               ; preds = %44, %42
  store i32 0, i32* %5, align 4
  br label %50

50:                                               ; preds = %49, %34
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local i32 @convert_sl_errno(i32) #1

declare dso_local i32 @mp_hal_delay_ms(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
